@@ -1,5 +1,6 @@
 0.4.11 (in development)
 ------------------------------------------------------------------------
+- Improved: [#21769] Expose “animation is backwards” wall property in Tile Inspector.
 - Fix: [#866] Boat Hire boats get stuck entering track.
 
 0.4.10 (2024-04-02)
